# FayCite

./: .env.example  .gitignore  README.md  apa_formatter.py  app.py  bibliography_parser.py  citation_formatter.py  citation_processor.py  document_parser.py  pdf_library.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
