[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "openai>=1.107.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
]
